--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ volumes:
   hf_cache:
 
 networks:
-  local-bridge: 
+  local-ai-network: 
     external: true
 
 x-n8n: &service-n8n
   image: n8nio/n8n:latest
-  networks: ['local-bridge']
+  networks: ['local-ai-network']
   environment:
     - DB_TYPE=postgresdb
     - DB_POSTGRESDB_HOST=postgres
@@ -29,7 +29,7 @@ x-n8n: &service-n8n
 
 x-ollama: &service-ollama
   image: ollama/ollama:latest
-  networks: ['local-bridge']
+  networks: ['local-ai-network']
   restart: unless-stopped
   ports:
     - 11434:11434
@@ -40,7 +40,7 @@ x-ollama: &service-ollama
 
 x-init-ollama: &init-ollama
   image: ollama/ollama:latest
-  networks: ['local-bridge']
+  networks: ['local-ai-network']
   volumes:
     - ollama_storage:/root/.ollama
   entrypoint: /bin/sh
@@ -56,7 +56,7 @@ services:
     profiles: ["n8n", "all"]
     image: postgres:16-alpine
     hostname: postgres
-    networks: ['local-bridge']
+    networks: ['local-ai-network']
     restart: unless-stopped
     ports:
       - 5432:5432
@@ -110,7 +110,7 @@ services:
     image: qdrant/qdrant
     hostname: qdrant
     container_name: qdrant
-    networks: ['local-bridge']
+    networks: ['local-ai-network']
     restart: unless-stopped
     ports:
       - 6333:6333
@@ -158,7 +158,7 @@ services:
     container_name: whisper
     ports:
       - "5001:5001"
-    networks: ['local-bridge']
+    networks: ['local-ai-network']
     environment:
       - WHISPER_HOST=whisper:5001
     restart: unless-stopped
@@ -170,7 +170,7 @@ services:
     profiles: ["comfyui", "all-gpu"]
     image: lecode-official/comfyui-docker:latest
     container_name: comfyui
-    networks: ['local-bridge']
+    networks: ['local-ai-network']
     environment:
       USER_ID: ${USER_ID:-1000}
       GROUP_ID: ${GROUP_ID:-1000}
@@ -194,7 +194,7 @@ services:
     container_name: kitten-tts
     ports:
       - "${TTS_PORT:-8005}:8005"
-    networks: ['local-bridge']
+    networks: ['local-ai-network']
     volumes:
       - ./kitten-tts/config.yaml:/app/config.yaml
       - ./kitten-tts/outputs:/app/outputs
