--- a/.env
+++ b/.env
@@ -1,16 +1,19 @@
 # Postgres
 POSTGRES_USER=n8n
-POSTGRES_PASSWORD=your_secure_password
+POSTGRES_PASSWORD=kyS3EuHggGRxvkgApiCs
 POSTGRES_DB=n8n
 
 # N8N
-N8N_ENCRYPTION_KEY=your_encryption_key
-N8N_USER_MANAGEMENT_JWT_SECRET=your_jwt_secret
-WEBHOOK_URL=http://localhost:5678
+N8N_ENCRYPTION_KEY=C0mZ6NGSM!sXhV0zOXYG2
+N8N_LICENSE_ACTIVATION_KEY=4bc60fa7-8c25-4297-8403-c2bbf2574a3e
+N8N_USER_MANAGEMENT_JWT_SECRET=08-eLjjJstWjZ!imP-RXeCW
+N8N_DEFAULT_BINARY_DATA_MODE=filesystem
+WEBHOOK_URL=https://2bc6be0ddb2e.ngrok-free.app
+
 
 # ComfyUI paths
-COMFYUI_MODELS_PATH=/path/to/comfyui/models
-COMFYUI_CUSTOM_NODES_PATH=/path/to/comfyui/custom_nodes
+COMFYUI_MODELS_PATH="C:\Users\maxva\Models"
+COMFYUI_CUSTOM_NODES_PATH="C:\Users\maxva\CustomNodes"
 USER_ID=1000
 GROUP_ID=1000
 
