Replace kittentts with coquitts

--- a/.env
+++ b/.env
@@ -22,3 +22,4 @@ TTS_PORT=8005
 TTS_RUNTIME=nvidiaOLLAMA_HOST=ollama:11434
 PORT=8005
 OLLAMA_HOST=ollama:11434
+TTS_MODEL=tts_models/en/ljspeech/tacotron2-DDC
