Working comfyui setup

--- a/.env
+++ b/.env
@@ -23,3 +23,5 @@ TTS_RUNTIME=nvidiaOLLAMA_HOST=ollama:11434
 PORT=8005
 OLLAMA_HOST=ollama:11434
 TTS_MODEL=tts_models/en/ljspeech/tacotron2-DDC
+KOKORO_PORT=8880
+KOKORO_MODEL=kokoro-v0_19
