--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ x-init-ollama: &init-ollama
 
 services:
   postgres:
-    image: postgres:16-alpine
+    image: pgvector/pgvector:pg16
     hostname: postgres
     networks: ['local-bridge']
     restart: on-failure:5
@@ -65,6 +65,7 @@ services:
       - POSTGRES_DB
     volumes:
       - ./postgres_storage:/var/lib/postgresql/data
+      - ./postgres_init:/docker-entrypoint-initdb.d:ro
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -h localhost -U ${POSTGRES_USER} -d ${POSTGRES_DB}']
       interval: 5s
